--- a/glamyze/templates/my_admin/category.html
+++ b/glamyze/templates/my_admin/category.html
@@ -1,4 +1,4 @@
-{% extends 'admin/base.html' %}
+{% extends 'my_admin/base.html' %}
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb" class="px-4">
     <ol class="breadcrumb">
