--- a/glamyze/templates/user/blank_layout.html
+++ b/glamyze/templates/user/blank_layout.html
@@ -339,6 +339,13 @@
         {% endblock home%}
 	
 	</section>
+	<section class="bg0 p-t-23 p-b-140">
+	
+        {% block shop %}
+
+        {% endblock shop%}
+	
+	</section>
 
 
 	<!-- Footer -->
