--- a/glamyze/templates/user/shop_product.html
+++ b/glamyze/templates/user/shop_product.html
@@ -1,11 +1,6 @@
 {% load static %}
-<div class="container">
-			<div class="p-b-10">
-				<h3 class="ltext-103 cl5">
-					Product Overview
-				</h3>
-			</div>
-
+<div class="bg0 m-t-23 p-b-140">
+		<div class="container">
 			<div class="flex-w flex-sb-m p-b-52">
 				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
@@ -20,6 +15,17 @@
 						Men
 					</button>
 
+					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".bag">
+						Bag
+					</button>
+
+					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".shoes">
+						Shoes
+					</button>
+
+					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".watches">
+						Watches
+					</button>
 				</div>
 
 				<div class="flex-w flex-c-m m-tb-10">
@@ -238,13 +244,10 @@
 			</div>
 
 			<div class="row isotope-grid">
-                
-				{% include 'user/product_list.html' with products=products %}
-			
-
+				
+        {% include 'user/shop_products_list.html' %}
+				
 			</div>
-
-		</div>
-
-
+        </div>
+	</div>
 		
