--- a/glamyze/templates/user/index.html
+++ b/glamyze/templates/user/index.html
@@ -8,3 +8,6 @@
 {% block home %}
 	{% include 'user/home_page_layout.html' %}
 {% endblock home %}
+{% block active1 %}
+class="active-menu"
+{% endblock %}
