--- a/glamyze/templates/user/shop.html
+++ b/glamyze/templates/user/shop.html
@@ -3,3 +3,6 @@
 {% block shop %}
 	{% include 'user/shop_product.html' %}
 {% endblock shop %}
+{% block active2 %}
+class="active-menu"
+{% endblock %}
