--- a/glamyze/templates/user/home_page_layout.html
+++ b/glamyze/templates/user/home_page_layout.html
@@ -1,4 +1,5 @@
 {% load static %}
+<section class="bg0 p-t-23 p-b-140">
 <div class="container">
 			<div class="p-b-10">
 				<h3 class="ltext-103 cl5">
@@ -245,6 +246,7 @@
 			</div>
 
 		</div>
+</section>
 
 
 		
