--- a/glamyze/templates/user/shop_product.html
+++ b/glamyze/templates/user/shop_product.html
@@ -3,29 +3,17 @@
 		<div class="container">
 			<div class="flex-w flex-sb-m p-b-52">
 				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
+					<a class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 {%if category_id%}{% else %}how-active1{% endif %}" href="{% url 'product_app:shop' %}">
 						All Products
-					</button>
+					<a>
+					{% for category in categories %}
 
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".women">
-						Women
-					</button>
+					<a class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 {% if category_id|stringformat:'s' == category.id|stringformat:'s' %}how-active1{% endif %}" href="{% url 'product_app:shop' %}?categoryid={{ category.id }}{% if searchvalue %}&searchvalue={{searchvalue}} {% endif %} ">
+						{{ category.category_name }}
+					</a>
+					{% endfor %}
 
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".men">
-						Men
-					</button>
-
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".bag">
-						Bag
-					</button>
-
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".shoes">
-						Shoes
-					</button>
-
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".watches">
-						Watches
-					</button>
+					
 				</div>
 
 				<div class="flex-w flex-c-m m-tb-10">
@@ -38,21 +26,32 @@
 					<div class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3 trans-04 m-tb-4 js-show-search">
 						<i class="icon-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-search"></i>
 						<i class="icon-close-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>
-						Search
+						
 					</div>
 				</div>
 				
 				<!-- Search product -->
+				
 				<div class="dis-none panel-search w-full p-t-10 p-b-15">
+					<form class="d-flex px-3">
+						{% if category_id %}
+						<input type="hidden" value="{{category_id}}" name="categoryid" >
+						{% endif %}
+						{% if subcategory_id %}
+						<input type="hidden" value="{{subcategory_id}}" name="subcategoryid">
+						{% endif %}
 					<div class="bor8 dis-flex p-l-15">
-						<button class="size-113 flex-c-m fs-16 cl2 hov-cl1 trans-04">
+						<button type="submit" class="size-113 flex-c-m fs-16 cl2 hov-cl1 trans-04">
 							<i class="zmdi zmdi-search"></i>
 						</button>
 
-						<input class="mtext-107 cl2 size-114 plh2 p-r-15" type="text" name="search-product" placeholder="Search">
+						<input class="mtext-107 cl2 size-114 plh2 p-r-15" type="text" name="searchvalue"  {% if searchvalue %} value="{{searchvalue}}" {% endif %} placeholder="Search">
+					
 					</div>	
+				</form>
 				</div>
 
+			
 				<!-- Filter -->
 				<div class="dis-none panel-filter w-full p-t-10">
 					<div class="wrap-filter flex-w bg6 w-full p-lr-40 p-t-27 p-lr-15-sm">
@@ -245,8 +244,33 @@
 
 			<div class="row isotope-grid">
 				
-        {% include 'user/shop_products_list.html' %}
+        {% include 'user/shop_product_list.html' %}
 				
+			</div>
+			<nav aria-label="Page navigation d-flex justify-content-center">
+				<ul class="pagination justify-content-center">
+					<!-- Previous button -->
+					<li class="page-item {% if products.number == 1 %}disabled{% endif %}">
+						<a class="page-link" href="{% if page_obj.number != 1 %}?page={{ page_obj.number|add:'-1' }}{% if searchvalue %}&searchvalue={{searchvalue}}{% endif %}{% if category_id %}&categoryid={{category_id}}{% endif %}{% if subcategory_id %}&subcategoryid={{subcategory_id}}{% endif %}{% else %}#{% endif %}" {% if page_obj.number == 1 %}tabindex="-1" aria-disabled="true"{% endif %}>
+							Previous
+						</a>
+					</li>
+			
+					<!-- Page numbers -->
+					{% for i in products.paginator.page_range %}
+						<li class="page-item {% if page_obj.number == i %}active{% endif %}" {% if page_obj.number == i %}aria-current="page"{% endif %}>
+							<a class="page-link" href="?page={{i}}{% if searchvalue %}&searchvalue={{searchvalue}}{% endif %}{% if category_id %}&categoryid={{category_id}}{% endif %}{% if subcategory_id %}&subcategoryid={{subcategory_id}}{% endif %}">{{i}}</a>
+						</li>
+					{% endfor %}
+			
+					<!-- Next button -->
+					<li class="page-item {% if products.number == products.paginator.num_pages %}disabled{% endif %}">
+						<a class="page-link" href="{% if page_obj.number != page_obj.paginator.num_pages %}?page={{ page_obj.number|add:'1' }}{% if searchvalue %}&searchvalue={{searchvalue}}{% endif %}{% if category_id %}&categoryid={{category_id}}{% endif %}{% if subcategory_id %}&subcategoryid={{subcategory_id}}{% endif %}{% else %}#{% endif %}" {% if page_obj.number == page_obj.paginator.num_pages %} tabindex="-1" aria-disabled="true"{% endif %}>
+							Next
+						</a>
+					</li>
+				</ul>
+			</nav>          
 			</div>
         </div>
 	</div>
