--- a/glamyze/templates/user/shop_product_list.html
+++ b/glamyze/templates/user/shop_product_list.html
@@ -1,22 +1,25 @@
+
+{% load static %}
+{% for product in products%}
 <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					<!-- Block2 -->
 					<div class="block2">
 						<div class="block2-pic hov-img0">
-							<img src="{% static 'images/product-01.jpg' %}" alt="IMG-PRODUCT">
+							<img src="{{product.image1.url}}" alt="IMG-PRODUCT">
 
-							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-								Quick View
+							<a href="" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+								View
 							</a>
 						</div>
 
 						<div class="block2-txt flex-w flex-t p-t-14">
 							<div class="block2-txt-child1 flex-col-l ">
-								<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-									Esprit Ruffle Shirt
+								<a href="{% url 'product_app:product_view' product.id %}" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+									{{product.product_name}}
 								</a>
 
 								<span class="stext-105 cl3">
-									$16.64
+									{{ product.variant_price }}
 								</span>
 							</div>
 
@@ -29,3 +32,4 @@
 						</div>
 					</div>
 				</div>
+			{% endfor %}
