--- a/glamyze/templates/user/shop_product_list.html
+++ b/glamyze/templates/user/shop_product_list.html
@@ -14,12 +14,21 @@
 
 						<div class="block2-txt flex-w flex-t p-t-14">
 							<div class="block2-txt-child1 flex-col-l ">
+								{% if product.total_stock == 0 %}
+        						<div class="warning-message" style="color: #ff0000; font-size: 12px; margin: 5px 0; font-weight: 500; text-align: center;">
+            						Out of Stock
+        						</div>
+        						{% elif product.total_stock <= 5 %}
+        							<div class="warning-message" style="color: #ffa500; font-size: 12px; margin: 5px 0; font-weight: 500; text-align: center;">
+            						Low Stock
+        						</div>
+        						{% endif %}
 								<a href="{% url 'product_app:product_view' product.id %}" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
 									{{product.product_name}}
 								</a>
 
 								<span class="stext-105 cl3">
-									{{ product.variant_price }}
+									₹{{ product.variant_price }}
 								</span>
 							</div>
 
