--- a/glamyze/templates/user/user_dashboard.html
+++ b/glamyze/templates/user/user_dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'user/account_layout.html' %}
+{% block address_active1 %}active{% endblock %}
 {% block content %}
 <div class="container-fluid">
   <div class="card">
